-feature#5149: Allow CSS files to be loaded async #5149
-feature: Allow messages to be popup notifications

1.2.24
-issue#5127: Importing Local_Linux_Machine.xml.gz template raises PHP error
-issue#5134: Display of "Memory Limit" on Boost Status page shows -1 and not "Unlimited"
-issue#5135: Error in using RRDcleaner an RRDcheck causing SQL errors
-issue#5137: When attempting to update structured paths, SQL errors occur
-issue#5140: Cacti PHP 8.2 SNMP Errors with php-snmp Installed
-issue#5142: Correct issues with permission model including display of authorization UI elements and warnings
-issue#5143: When a Device has zero Graphs or Data Sources, it does not display the correct value
-issue#5147: Error 500 on apache when changing languages
-issue#5155: Local Linux Machine Device Package Damaged
-issue#5160: Translations on debian 'Bullseye' systems may cause server errors

1.2.23
-security#4920: Add .htaccess file to scripts folder
-security#XXXX: CVE-2022-46169 Unauthenticated Command Injection in Remote Agent
-issue#4418: When using Single Signon Frameworks like SiteMinder Cacti does not properly detect ticket revocation in callbacks
-issue#4682: New templates are not installed during the update
-issue#4838: CLI Based upgrade generates warnings in PHP 8.1
-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
-issue#4889: Increase host query performance by removing check for NULL after 1.2.22
-issue#4892: Recache Loop after many devices go offline
-issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
-issue#4896: When remote poller is in offline mode GUI inaccesible and poller times out
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: MySQL 8.x regular expressions break Cacti Automation
-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5