@@ -56,6 +56,7 @@ Cacti CHANGELOG
 -issue#5127: Importing Local_Linux_Machine.xml.gz template raises PHP error
 -issue#5134: Display of "Memory Limit" on Boost Status page shows -1 and not "Unlimited"
 -issue#5135: Error in using RRDcleaner an RRDcheck causing SQL errors
+-issue#5136: Function number_format_i18n should return a valid number '0' for NULL input
 -issue#5137: When attempting to update structured paths, SQL errors occur
 -issue#5140: Cacti PHP 8.2 SNMP Errors with php-snmp Installed
 -issue#5142: Correct issues with permission model including display of authorization UI elements and warnings
